--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -2109,6 +2109,10 @@ h1 em, h2 em, h3 em, h4 em, h5 em, h6 em { font-style: normal; }
 
 .sidebar-inline + h1 { margin-top: 0; }
 
+h1, h2 { -moz-hyphens: none; -o-hyphens: none; -webkit-hyphens: none; -ms-hyphens: none; hyphens: none; }
+
+h3, h4, h5, h6 { -moz-hyphens: auto; -o-hyphens: auto; -webkit-hyphens: auto; -ms-hyphens: auto; hyphens: auto; }
+
 h2 { font-size: 24px; line-height: 28px; margin: 0; padding: 22px 0; font-weight: bold; }
 .sidebar-outline h2, .widget h2 { padding-bottom: 11px; }
 .sidebar-inline h2 { padding-top: 0; }
