--- a/css/sass/elements/_headlines.scss
+++ b/css/sass/elements/_headlines.scss
@@ -11,14 +11,13 @@ h4,
 h5,
 h6 {
 	color: $colorPrimary;
+	font-weight: bold;
 	
 	em {
 	    font-style: normal;
 	}
 }
-.sidebar-inline+h1 {
-	    margin-top: 0;
-}
+
 
 
 h1, h2 {
@@ -28,12 +27,18 @@ h3, h4, h5, h6 {
     @include hyphens(auto);
 }
 
+h1 {
+    @include px2rem($font-size-h1);
+    
+    .sidebar-inline+& {
+	    margin-top: 0;
+    }
+}
+
 h2 {
-	font-size: 24px;
-	line-height: 28px;
+	@include px2rem($font-size-h2);
 	margin: 0;
 	padding: 22px 0;
-	font-weight: bold;
 	
 	
 	.sidebar-outline &, 
@@ -52,18 +57,15 @@ h2 {
 	
 	
 	&.small,
+	&.subtitle,
 	.sidebar-inline &,
 	.search-sidebar &,
 	.sidebar-outline &, 
 	.widget & {
-	    font-size: 18px;	
-	    line-height: 22px;
+	    @include px2rem($font-size-h2-small);
 	}
 	 
-	.sidebar-inline .quicklinks & {  
-	
-		font-size: 18px;
-		line-height: 22px;
+	.sidebar-inline .quicklinks & {  	
 		font-weight: bold;
 		padding-bottom: 11px;
 		padding-top: 0;
@@ -75,14 +77,12 @@ h2 {
 	}
 	
 	&.subtitle {
-		font-size: 18px;
-		line-height: 22px;
 		padding: 20px 0 22px 0;		
 	}
 	
 	&.menu-header {
 		padding: 11px 15px;
-		margin-top: 10px;
+		margin-top: 0px;
 		border-top: 1px solid $colorLightest;	
 	}
 	
@@ -94,9 +94,7 @@ h2 {
 h3 {
 	margin: 0;
 	padding: 11px 0;
-	font-size: 18px;
-	line-height: 22px;
-	font-weight: bold;
+	@include px2rem($font-size-h3);
 	
 	&.abstract {
 		padding: 0 0 22px 0;
@@ -128,9 +126,7 @@ h3 {
 h4 {
 	margin: 0;
 	padding: 11px 0 11px 0;
-	font-size: 15px;
-	line-height: 22px;
-	font-weight: bold;
+	@include px2rem($font-size-h4);
 	
 	.span3 &, 
 	.span4 & {
@@ -144,11 +140,12 @@ h4 {
 h5 {
 	margin: 0;
 	padding: 11px 0 11px 0;
-	font-size: 15px;
-	line-height: 22px;
-	font-weight: normal;
+	@include px2rem($font-size-h5);
 }
 
+h6 {
+    @include px2rem($font-size-h6);
+}
 
 
 @media (max-width: $breakSM) {
