--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -161,10 +161,25 @@ $font-size-hero-slider-title:   24;
 $font-size-hero-slider-text:	18;
 $font-size-hero-slider-copyright: 14;
 $font-size-textbuttons:		14;
-$font-size-h3-contentmenu:	16;
 $font-size-linkicon:		13;
+
 $font-size-content-linkicon:	10;
 $font-size-content-listitem:	15;
+$font-size-sidebar-listitem:    $font-size-content-listitem;
+
+$font-size-h1:			32;
+$font-size-h2:			24;
+$font-size-h2-small:		22;
+$font-size-h3:			20; // 18
+$font-size-h3-small:		19;
+$font-size-h4:			18; // 15
+$font-size-h4-small:		17;
+$font-size-h5:			16; // 15 
+$font-size-h6:			$font-size-base;
+
+$font-size-h3-contentmenu:	16;
+
+
 
 
 $font-size-content-meta:	14;
