--- a/css/sass/elements/_headlines.scss
+++ b/css/sass/elements/_headlines.scss
@@ -16,6 +16,9 @@ h6 {
 	em {
 	    font-style: normal;
 	}
+	&.widget-title {
+	    padding-top: 0;			
+	}
 }
 
 
@@ -45,14 +48,9 @@ h2 {
 	.widget & {
 	    padding-bottom: 11px;
 	}
-	.sidebar-inline & {
-	    padding-top: 0;			
-	}	
+		
 	.search-sidebar & {
 	    padding-top: 8px;
-	}
-	.sidebar-inline+& {
-	    padding-top: 0;
 	}
 	
 	
@@ -100,22 +98,23 @@ h3 {
 		padding: 0 0 22px 0;
 	}
 	
-	.span &, 
-	.span4 &, 
-	.subpages-menu & {
-		font-size: 16px;
-		font-weight: normal;
-	}
+	
 	.sidebar-inline &,
 	.search-sidebar &,
 	.sidebar-outline &, 
-	.widget & {
-	    font-size: 16px;	
-	    line-height: 20px;
+	.widget &,
+	.span &, 
+	.span4 &, 
+	.subpages-menu & {
+	    @include px2rem($font-size-h3-small);
 	}
-	.sidebar-inline+& {
-	    padding-top: 0;
+	
+	.span &, 
+	.span4 &, 
+	.subpages-menu & {
+		font-weight: normal;
 	}
+	
 	
 	#meta & {
 	    @extend .screen-reader-text;
@@ -130,11 +129,9 @@ h4 {
 	
 	.span3 &, 
 	.span4 & {
-		font-size: 14px;
+		@include px2rem($font-size-h4-small);
 	}
-	.sidebar-inline+& {
-	    padding-top: 0;
-	}
+
 }
 
 h5 {
@@ -148,19 +145,11 @@ h6 {
 }
 
 
+	
 @media (max-width: $breakSM) {
     .page-template-page-subnav {
 	#hero.hero-small h1 {
 		    padding-left: 15px;
-	}
-	#content {
-	    .container {
-		h1, h2, h3, h4, h5, h6, p {
-		    margin-left: 0px;
-		    margin-right: 0px;
-		}
-
-	    }
 	}
     }
     #content .subpages-menu {
@@ -177,7 +166,7 @@ h6 {
 		margin-left: 15px;
 		margin-right: 15px;
 		
-		
+		#wp-content-wrap &, 
 		#content .container & {
 		    margin-left: 0px;
 		    margin-right: 0px;
