Fixes Anzeige Sidebar-Inline Content

--- a/css/base.css
+++ b/css/base.css
@@ -2906,8 +2906,8 @@ html, body, button { font-family: "roboto", "Helvetica Neue", Helvetica, Arial, 
 /*-----------------------------------------------------------------------------------*/
 #content { padding: 20px 0 30px 0; }
 #content .container { position: relative; }
-#content main { font-size: 15px; line-height: 22px; color: #444; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; }
-#content main .sidebar-inline { font-size: 13px; line-height: 18px; }
+#content main { font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem; color: #444; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; padding-top: 10px; }
+#content main .sidebar-inline { font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
 
 @media (max-width: 480px) { #content { padding-bottom: 0; }
   .page-template-page-start-sub.js-enabled #hero .banner { top: 0; bottom: 0; } }
@@ -3368,11 +3368,11 @@ h2.menu-header { padding: 11px 15px; margin-top: 0px; border-top: 1px solid #dde
 
 h3 { margin: 0; padding: 11px 0; font-size: 20px; line-height: 28px; font-size: 1.25rem; line-height: 1.75rem; }
 h3.abstract { padding: 0 0 22px 0; }
-.sidebar-inline h3, .search-sidebar h3, .sidebar-outline h3, .widget h3, .span h3, .span4 h3, .subpages-menu h3 { font-size: 19px; line-height: 26.6px; font-size: 1.1875rem; line-height: 1.6625rem; }
-.span h3, .span4 h3, .subpages-menu h3 { font-weight: normal; }
+.sidebar-inline h3, .search-sidebar h3, .sidebar-outline h3, .widget h3, .person h3, .subpages-menu h3 { font-size: 19px; line-height: 26.6px; font-size: 1.1875rem; line-height: 1.6625rem; }
+.subpages-menu h3 { font-weight: normal; }
 
 h4 { margin: 0; padding: 11px 0 11px 0; font-size: 18px; line-height: 25.2px; font-size: 1.125rem; line-height: 1.575rem; }
-.span3 h4, .span4 h4 { font-size: 17px; line-height: 23.8px; font-size: 1.0625rem; line-height: 1.4875rem; }
+.person h4, .span3 h4, .span4 h4 { font-size: 17px; line-height: 23.8px; font-size: 1.0625rem; line-height: 1.4875rem; }
 
 h5 { margin: 0; padding: 11px 0 11px 0; font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem; }
 
@@ -3385,11 +3385,11 @@ h6 { font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem;
 /*-----------------------------------------------------------------------------------*/
 /* Paragraphs
 /*-----------------------------------------------------------------------------------*/
-p { margin: 0; padding: 0 0 11px 0; font-size: 15px; line-height: 22px; color: #444; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+p { margin: 0; padding: 0 0 11px 0; font-size: 16px; line-height: 22.4px; font-size: 1rem; line-height: 1.4rem; color: #444; font-family: "roboto", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 #content p { -moz-hyphens: auto; -o-hyphens: auto; -webkit-hyphens: auto; -ms-hyphens: auto; hyphens: auto; }
 #content .textwidget p { font-size: 13px; }
 p.searchnotice { font-size: 24px; line-height: 28px; padding: 4px 0 22px 0; }
-#content .span4 .widget p, #content .sidebar-inline .widget p { font-size: 13px; line-height: 22px; }
+#content .span4 .widget p, #content .sidebar-inline .widget p { font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
 
 /*-----------------------------------------------------------------------------------*/
 /* Links
@@ -3428,7 +3428,7 @@ table a:hover, table a:focus { text-decoration: none; }
 /* Lists
 /*-----------------------------------------------------------------------------------*/
 li { padding: 3px 0 4px 4px; font-size: 15px; line-height: 21px; font-size: 0.9375rem; line-height: 1.3125rem; color: #444; }
-.sidebar-inline li { padding: 3px 0 4px 20px; font-size: 15px; line-height: 21px; font-size: 0.9375rem; line-height: 1.3125rem; }
+.sidebar-inline li { padding: 3px 0 4px 20px; font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; }
 
 ul { /* Lettered Pagination */ /* File Lists */ }
 ul li { list-style-type: circle; }
@@ -3700,29 +3700,28 @@ div.aligncenter { margin-bottom: 10px; }
 .person-info-more a { display: inline-block; *display: inline; *zoom: 1; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; background-clip: padding-box; font-size: 14px; line-height: 19.6px; font-size: 0.875rem; line-height: 1.225rem; background: #dde5f0; padding: 6px 10px; text-decoration: none; }
 .person-info-more a:hover, .person-info-more a:focus { background: #cbd7e8; text-decoration: none; }
 
-.person h3 { padding-bottom: 0; padding-top: 5px; font-weight: bold; font-size: 15px; }
+.person h3 { padding-bottom: 0; padding-top: 5px; }
 .person h3 a { color: #444; }
 .person h3:hover, .person h3:focus { text-decoration: underline; }
-.person h4 { padding-top: 0; font-weight: normal; }
+.person h4 { padding-top: 0; }
 .person h4 a { color: #444; text-decoration: underline; }
 .person .connection { margin-top: 10px; }
 .person .connection ul { margin-top: 5px; }
-.person .connection li { font-size: 13px; line-height: 20px; padding: 0; }
+.person .connection li { padding: 0; }
 .archive .person .span6 { width: calc(100% - 130px); }
 .archive .person .span6 .person-info-description { padding-right: 10px; }
 .archive .person .span6 .person-info-more { margin-right: 20px; text-align: right; }
 
 .content-person { border: 1px solid #e9edf2; margin: 10px 0; padding: 10px; overflow: hidden; }
 @media (max-width: 767px) { .content-person { margin: 10px 10px; padding: 10px 0; } }
-.content-person li { font-size: 13px; line-height: 20px; background-position: left 5px; }
+.content-person li { background-position: left 5px; }
 .content-person .person-info-description { padding-top: 8px; }
 @media (max-width: 767px) { .content-person .person-info-description { margin-left: 0 !important; } }
-.content-person .person-info-description, .content-person .person-info-description p { font-size: 13px; line-height: 20px; }
 .content-person .image-placeholder { width: 90px; height: 120px; background: #dde5f0; position: relative; text-align: center; }
 .content-person .image-placeholder:before { line-height: 120px; color: #8fb1ef; }
 .accordion .content-person { padding: 0; border: none; margin: 0 0 15px 0; }
 
-ul.person-info { list-style: none; margin: 0; padding: 0; background: none; /*
+ul.person-info { list-style: none; margin: 0; padding: 0; background: none; margin-bottom: 10px; /*
 li.person-info:before {
 	@extend .fa;
 	width: 20px;
@@ -3731,7 +3730,7 @@ li.person-info-institution:before {  @extend .fa; width: 20px;  @extend .fa-buil
 }
 */ }
 ul.person-info:before { display: none; }
-ul.person-info li { list-style: none; margin: 0; padding: 0; background: none; background-image: none; padding-left: 0px; min-height: 20px; background-repeat: no-repeat; background-position: left center; font-size: 13px; line-height: 20px; }
+ul.person-info li { list-style: none; margin: 0; padding: 0; background: none; background-image: none; padding-left: 0px; min-height: 20px; background-repeat: no-repeat; background-position: left center; }
 ul.person-info li:before { display: none; }
 ul.person-info li li { list-style: inherit; display: list-item; }
 ul.person-info li ul li { list-style-type: disc; }
@@ -3757,9 +3756,8 @@ span[itemprop="honorificPrefix"], span[itemprop="honorificSuffix"] { white-space
 .sidebar-inline .content-person { border: none; margin: 0; padding: 0; }
 .sidebar-inline h2 { padding-bottom: 11px; }
 .sidebar-inline .widget_faupersonwidget { margin-top: 0; }
-.sidebar-inline .widget_faupersonwidget .row { display: inline-block; }
-.sidebar-inline .widget_faupersonwidget .row .span1 { float: left; }
-.sidebar-inline .widget_faupersonwidget .row .span3 { display: inline-block; }
+.sidebar-inline .widget_faupersonwidget .row { display: inline-block; margin: 0; }
+.sidebar-inline .widget_faupersonwidget .row .span1, .sidebar-inline .widget_faupersonwidget .row .span3 { display: inline-block; float: none; width: auto; margin: 0; }
 
 .sidebar-outline ul.person-info li { color: #444; }
 .sidebar-outline li.person-info-address { white-space: pre; }
