--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -165,7 +165,10 @@ $font-size-linkicon:		13;
 
 $font-size-content-linkicon:	10;
 $font-size-content-listitem:	15;
-$font-size-sidebar-listitem:    $font-size-content-listitem;
+
+$font-size-sidebar:		14;
+$font-size-sidebar-listitem:    $font-size-sidebar;
+
 
 $font-size-h1:			32;
 $font-size-h2:			24;
