--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -182,7 +182,8 @@ $font-size-h6:			$font-size-base;
 
 $font-size-h3-contentmenu:	16;
 
-
+$font-size-quotes:		$font-size-base;
+$font-size-quotes-cites:	($font-size-base - 1);    
 
 
 $font-size-content-meta:	14;
