--- a/css/editor-style.css
+++ b/css/editor-style.css
@@ -2276,16 +2276,21 @@ table ul li { color: #003366; font-size: 13px; line-height: 18px; background-pos
 /*-----------------------------------------------------------------------------------*/
 /* Blockquotes, Cites
 /*-----------------------------------------------------------------------------------*/
-blockquote { padding: 0; margin: 0; border: none; font-family: Georgia, serif; font-style: italic; font-size: 16px; line-height: 26px; font-size: 1rem; line-height: 1.625rem; }
+blockquote { padding: 0; margin: 0; border: none; font-family: Georgia, serif; font-style: italic; position: relative; font-size: 16px; line-height: 26px; font-size: 1rem; line-height: 1.625rem; }
 blockquote p { font-family: Georgia, serif; font-size: 16px; line-height: 26px; font-size: 1rem; line-height: 1.625rem; font-weight: 400; font-style: italic; }
 blockquote p strong { font-weight: bolder; }
-#content blockquote { font-style: italic; background: url("../img/quote-blue.png") no-repeat left top; margin: 10px 50px; padding-left: 60px; min-height: 50px; }
+#content blockquote { font-style: italic; margin: 10px 50px; padding-left: 60px; min-height: 50px; }
 #content blockquote p { color: #003366; }
-#content .sidebar-inline blockquote, #content blockquote.noquote { background: inherit; padding-left: 0; }
 #content .sidebar-inline blockquote { margin: 10px; }
-blockquote cite { display: block; font-size: 15px; line-height: 21px; font-size: 0.9375rem; line-height: 1.3125rem; color: #797676; }
-blockquote cite:before { content: '\2014 \00A0'; }
-blockquote.pull-right { border-right: none; }
+blockquote small, blockquote cite { display: block; text-align: right; font-size: 15px; line-height: 21px; font-size: 0.9375rem; line-height: 1.3125rem; color: #797676; }
+blockquote small:before, blockquote cite:before { content: '\2014 \00A0'; }
+blockquote.pull-right { border-right: none; padding-right: 50px; }
+blockquote.pull-right::before { content: ""; }
+blockquote.pull-right::after { content: "\201C"; font-family: Georgia, serif; font-size: 70px; font-weight: bold; color: #797676; position: absolute; right: 10px; top: 10px; }
+blockquote::before { content: "\201C"; font-family: Georgia, serif; font-size: 70px; font-weight: bold; color: #797676; position: absolute; left: 10px; top: 10px; }
+blockquote::after { content: ""; }
+#content .sidebar-inline blockquote, #content blockquote.noquote { background: inherit; padding-left: 0; padding-right: 0; }
+#content .sidebar-inline blockquote::after, #content .sidebar-inline blockquote::before, #content blockquote.noquote::after, #content blockquote.noquote::before { content: ""; }
 
 cite { color: #0059b3; font-weight: normal; }
 
