--- a/css/sass/elements/_quotes.scss
+++ b/css/sass/elements/_quotes.scss
@@ -9,6 +9,7 @@ blockquote {
 	border: none;
 	font-family: $fontStackSerifs;
 	font-style: italic;
+	position: relative;
 	
 	@include px2rem($font-size-quotes,$font-size-quotes,26);
 	
@@ -27,7 +28,6 @@ blockquote {
 	
 	#content & {
 		font-style: italic;
-		background: url('../img/quote-blue.png') no-repeat left top;
 		margin: 10px 50px;
 		padding-left: 60px;
 		min-height: 50px;
@@ -38,26 +38,69 @@ blockquote {
 		
 		
 	}
-	#content .sidebar-inline &,
-	#content  &.noquote {
-		    background: inherit;
-		    padding-left: 0;
-		}
+	
 	#content .sidebar-inline & {
 	    margin: 10px;
 	}
+	small,
 	cite { 
 	    display: block; 
-	    
+	    text-align: right;
 	    @include px2rem($font-size-quotes-cites);
 	    color: $colorTextLight;
 	    &:before { content: '\2014 \00A0'; }
 
 	}
 
+	
 	&.pull-right {
 	    border-right: none;
+	    padding-right: 50px;
+	    &::before {
+		content: "";
+	    }
+	    &::after {
+		content: "\201C"; // Unicode for Left Double Quote
+		font-family: Georgia, serif;
+		font-size: 70px;
+		font-weight: bold;
+		color: $colorTextLight; //lighten($color-text,50%); 
+
+		position: absolute;
+		right: 10px;
+		top: 10px;
+	    }
+	    
 	}
+	
+	
+	 &::before {
+            content: "\201C"; // Unicode for Left Double Quote
+            font-family: Georgia, serif;
+            font-size: 70px;
+            font-weight: bold;
+            color: $colorTextLight; //lighten($color-text,50%); 
+
+            position: absolute;
+            left: 10px;
+            top: 10px;
+        }
+        &::after{
+            // Reset to make sure
+            content: "";
+        }
+	
+	#content .sidebar-inline &,
+	#content  &.noquote {
+		    background: inherit;
+		    padding-left: 0;
+		    padding-right: 0;
+		    &::after, 
+		    &::before {
+			content: "";
+		    }
+		   
+		}
 }
 
 
