--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -169,6 +169,10 @@ $font-size-content-listitem:	15;
 $font-size-sidebar:		14;
 $font-size-sidebar-listitem:    $font-size-sidebar;
 
+$font-size-nav-blockquote:	16;
+$font-size-nav-blockquote-cite:	14;
+$font-size-nav-introtext:	15;
+
 
 $font-size-h1:			32;
 $font-size-h2:			24;
